--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -4,31 +4,23 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <style>
-        body {
-            color: green; /* Цвет текста */
-            face: Impact;
-        }
+        body {color: green;} /* Цвет текста */
+        a:link { color: white } /* Цвет непросмотренной ссылки */
+        a:visited { color: white; } /* Цвет посещенной ссылки */
+        a:hover { color: red; } /* Цвет при наведении */
+        a:active { color: green; } /* Цвет активной ссылки */
+        h1 {font size: 26;}
+
+
     </style>
 </head>
 <body style="background-color: black;">
     <h1><font size="6" color="#f5f5f5" face="Impact">Catalog</font></h1>
-    <p><a href="dog.html"><font color="white">Образец ссылки</font></a></p>
     <table>
-        <thead>
-        <tr>
-            <th><font color="white">Имя</font></th>
-            <th><font color="white">Фамилия</font></th>
-        </tr>
-        </thead>
         <tbody>
 
-        <tr th:each="user : ${users}">
-            <td th:text="${user.firstName}">Имя</td>
-            <td th:text="${user.lastName}">Фамилия</td>
-        </tr>
         <tr th:each="video : ${videos}">
-            <td th:text="${name}">Имя</td>
-            <p><a href="dog.html"><font color="white">Образец ссылки</font></a></p>
+            <p><a th:href="'/video/' + ${video}"><p th:text="${video}"/></a></p>
         </tr>
 
         </tbody>
