--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -3,8 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #sidebar {
+	background-image: url(/assets/r.jpg);
+	background-position: top left;
+	background-repeat: y-repeat;
+	border-right-width: 0px;
+	border--bottom-width: 0px;
+	border-left-width: 0px;
+	border-top-width: 0px;
+	border-style: solid;
+}
+    </style>
 </head>
 <body>
+<table width="100%" cellspacing="0">
 
+    <tr>
+
+        <td width="150px" id="topleft" bgcolor="black">
+            <br>
+        </td>
+
+        <td width="521" id="topright" height="134" bgcolor="#660000"><br>
+        </td>
+
+        <td width="*" id="edge" height="134" bgcolor="#660000"><br></td>
+    </tr>
+    <tr>
+        <td width="150px" height="500" rowspan="2" id="sidebar" valign="top">
+        </table>
 </body>
 </html>
