--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -4,34 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #sidebar {
-	background-image: url(/assets/r.jpg);
-	background-position: top left;
-	background-repeat: y-repeat;
-	border-right-width: 0px;
-	border--bottom-width: 0px;
-	border-left-width: 0px;
-	border-top-width: 0px;
-	border-style: solid;
-}
+        body {
+            background-color: #424141;
+            color: white; * Цвет текста */
+        }
+        .plenka{
+            background-image: url(/assets/r);
+            background-size: 100px 50px;
+            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+        }
     </style>
 </head>
 <body>
-<table width="100%" cellspacing="0">
-
-    <tr>
-
-        <td width="150px" id="topleft" bgcolor="black">
-            <br>
-        </td>
-
-        <td width="521" id="topright" height="134" bgcolor="#660000"><br>
-        </td>
-
-        <td width="*" id="edge" height="134" bgcolor="#660000"><br></td>
-    </tr>
-    <tr>
-        <td width="150px" height="500" rowspan="2" id="sidebar" valign="top">
-        </table>
+<div class="plenka"/>
 </body>
 </html>
